--- a/adaptive_knn.ipynb
+++ b/adaptive_knn.ipynb
@@ -118,7 +118,7 @@
           "height": 555
         },
         "id": "s5WQjSG5-rvo",
-        "outputId": "1ccb244a-aafe-406c-c4d1-77c56a6a63d7"
+        "outputId": "18355c28-c046-4fd5-9565-b62d9890653e"
       },
       "execution_count": null,
       "outputs": [
@@ -155,6 +155,13 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "FF25_HCntNjl"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "#### Learning with noisy labels\n",
         "\n",
@@ -171,17 +178,25 @@
       "cell_type": "code",
       "source": [
         "import random\n",
-        "noise_probability = 0.7\n",
+        "noise_probability = 0.5\n",
+        "SEED = 314159\n",
         "\n",
-        "def corrupt_label(y, err):\n",
-        "    found = np.where(err == y)\n",
-        "    if len(found) > 0:\n",
-        "        # select an element at random (index != found)\n",
-        "        noisy_label = random.choice(err)\n",
-        "        while noisy_label == y:\n",
-        "            noisy_label = random.choice(err)\n",
-        "        return noisy_label\n",
-        "    return y\n",
+        "random.seed(SEED)\n",
+        "\n",
+        "def index(array, item):\n",
+        "    for i in range(len(array)):\n",
+        "        if item == array[i]:\n",
+        "            return i\n",
+        "    return -1\n",
+        "\n",
+        "def corrupt_label(y, y_index, err):\n",
+        "    n = len(err)\n",
+        "    # select an element at random (index != found)\n",
+        "    if (y_index == n-1):\n",
+        "        noisy_label = err[0]\n",
+        "    else:\n",
+        "        noisy_label = err[(y_index + 1)%n]\n",
+        "    return noisy_label\n",
         "\n",
         "# We corrupt the MNIST data with some common mistakes, such as 3-->8, 8-->3, 1-->{4, 7}, 5-->6 etc.\n",
         "def corrupt_labels(y_train, noise_probability):\n",
@@ -197,9 +212,13 @@
         "\n",
         "        if p < noise_probability:\n",
         "            y = y_train[i]\n",
-        "            y_noisy = corrupt_label(y, err_es_1)\n",
-        "            if y_noisy == y:\n",
-        "                y_noisy = corrupt_label(y, err_es_2)\n",
+        "\n",
+        "            y_index = index(err_es_1, y)\n",
+        "            if y_index >= 0:\n",
+        "                y_noisy = corrupt_label(y, y_index, err_es_1)\n",
+        "            else:\n",
+        "                y_index = index(err_es_2, y)\n",
+        "                y_noisy = corrupt_label(y, y_index, err_es_2)\n",
         "\n",
         "            key = str(y_train[i]) + '->' + str(y_noisy)\n",
         "            corrupted_indexes[i] = i\n",
@@ -215,14 +234,14 @@
         "\n",
         "corruptions, corrupted_indexes = corrupt_labels(y_train, noise_probability)\n",
         "print (\"Corruptions: \" + str(corruptions))\n",
-        "print (\"Corrupted indexes: {}\".format(list(corrupted_indexes.keys())[0:10]))\n"
+        "print (\"Number of corruptions: {}\".format(len(list(corrupted_indexes.keys()))))\n"
       ],
       "metadata": {
         "id": "_gQF7tFB-7qr",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5695bec6-8e2a-4080-fb3b-56ad078c230a"
+        "outputId": "62e3d720-91be-47a1-de83-8fe6b4626bf2"
       },
       "execution_count": null,
       "outputs": [
@@ -230,8 +249,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Corruptions: {'0->2': 726, '4->3': 582, '1->3': 671, '9->2': 676, '2->8': 677, '1->2': 686, '3->9': 709, '5->3': 600, '6->0': 687, '1->8': 662, '7->8': 626, '2->3': 699, '8->5': 697, '6->5': 723, '9->0': 689, '0->6': 659, '1->0': 607, '1->6': 663, '3->6': 733, '8->2': 688, '6->9': 716, '0->9': 692, '1->5': 702, '7->2': 596, '9->3': 680, '3->2': 700, '9->5': 664, '4->6': 592, '6->3': 699, '0->5': 697, '7->6': 646, '7->9': 610, '8->9': 710, '6->8': 671, '4->8': 540, '3->5': 762, '5->8': 609, '4->0': 599, '2->9': 697, '0->3': 637, '7->5': 617, '8->0': 647, '4->5': 586, '1->9': 705, '3->8': 726, '3->0': 707, '2->6': 721, '5->9': 648, '8->6': 635, '7->3': 644, '2->0': 678, '6->2': 652, '9->6': 706, '5->0': 655, '2->5': 718, '0->8': 738, '4->9': 588, '9->8': 708, '5->2': 649, '5->6': 600, '7->0': 627, '8->3': 694, '4->2': 572}\n",
-            "Corrupted indexes: [1, 2, 3, 4, 5, 6, 7, 11, 12, 13]\n"
+            "Corruptions: {'5->6': 2666, '0->2': 2917, '4->7': 2888, '1->4': 3385, '9->0': 2997, '2->3': 2969, '3->5': 3027, '7->1': 3204, '8->9': 2911, '6->8': 2960}\n",
+            "Number of corruptions: 29934\n"
           ]
         }
       ]
@@ -267,7 +286,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I8SaJ0Wf_c6-",
-        "outputId": "a75b368e-c8b9-41ef-eb24-f69d07319d69"
+        "outputId": "857242da-0df2-48ce-a7b0-ffe8b1ee4644"
       },
       "execution_count": null,
       "outputs": [
@@ -276,7 +295,7 @@
           "name": "stdout",
           "text": [
             "3-NN model fitted\n",
-            "K-NN model accuracy with k=3: 0.2700\n"
+            "K-NN model accuracy with k=3: 0.4800\n"
           ]
         }
       ]
@@ -295,7 +314,7 @@
         " * $\\mu$: The average of the distances of the neighboring training points from the test point.   \n",
         "\n",
         "\n",
-        "Again for your own understanding, try to see wheether it makes sense to argue that the higher the variance, the less compact is the neighborhood, and perhaps we want a smaller $k$ for such ones? (no actionable item and no grading for finding this answer)\n",
+        "Again for your own understanding, try to see whether it makes sense to argue that the higher the variance, the less compact is the neighborhood, and perhaps we want a smaller $k$ for such ones? (no actionable item and no grading for finding this answer)\n",
         "\n",
         "Our task is now to write the function *predict_k_values_unsupervised*."
       ],
@@ -386,7 +405,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h7qLhANG_ylT",
-        "outputId": "8e725a8a-de73-4d21-d46d-898eb69ff98d"
+        "outputId": "c24743de-937f-4064-bdbf-289617faeb44"
       },
       "execution_count": null,
       "outputs": [
@@ -395,7 +414,7 @@
           "name": "stdout",
           "text": [
             "20-NN index built\n",
-            "Adaptive K-NN model accuracy: 0.3900\n"
+            "Adaptive K-NN model accuracy: 0.5300\n"
           ]
         }
       ]
@@ -408,7 +427,7 @@
         "We now seek to learn a function of the form $\\theta: \\mathbf{x} \\mapsto \\mathbb{Z}_k$ (e.g., via $k$-class softmax regression or an SVM or any other parametric classifier).\n",
         "\n",
         "**Task 1 (30 marks)**: Replace the function *predict_k_values_unsupervised* with another function *predict_k_values_supervised* which will do the following:\n",
-        "- Learn a mapping between a data instance from the training set and the smallest value of $k$ that results in correct predictions for that instance. In your report, clearly describe how do you train this classifier (e.g., what are the ground-truth y values for each training data point $\\mathbf{x} \\in S_{train}$.    \n",
+        "- Learn a mapping between a data instance from the training set and the smallest value of $k$ that results in correct predictions for that instance. In your report, clearly describe how do you train this classifier (e.g., what are the ground-truth target values for each training data point $\\mathbf{x} \\in S_{train}$.    \n",
         "- Apply this paramateric model to *predict* the value of $k$ at inference time (for this you just need to replace the call to **predict_k_values_unsupervised** inside **adaptive_knn** with your implemented method).\n",
         "\n",
         "**Task 2 (30 marks)**: Compare the performance of your implemented supervised approach vs. the baseline (unsupervised one) for different simulated datasets with varying amounts of noise. Make a plot with *noise_probability* on the x-axis and accuracy on the y-axis for 11 different values - {0, 0.1, ... 0.9, 1}.\n",
